@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added SEARCH and MORE to QDB.
     * Killed EMODS in the starter script and updated MODS
     * Added core command MODLIST.
     * Added command level 3 for logchan-only command.
